2010-06-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/stack.hh: Add autogenerated bison and flex parsers (using
	Bison 2.3 and Flex 2.5.35, Bison 2.4.2 seems to have changed the
	C++ API yet again).
	* src/location.hh: Likewise.
	* src/position.hh:Likewise.
	* src/RacerAnswerScanner.cpp: Likewise.
	* src/RacerAnswerParser.output: Likewise.
	* src/RacerAnswerParser.hpp: Likewise.
	* src/RacerAnswerParser.cpp: Likewise.
	* src/HexDLScanner.cpp: Likewise.
	* src/HexDLParser.output: Likewise.
	* src/HexDLParser.hpp: Likewise.
	* src/HexDLParser.cpp: Likewise.
	* src/FlexLexer.h: Likewise.
	* src/Makefile.am: Likewise.

2010-06-08  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/tests/test.out: Fixing testcase (by reordering reference output).

	* testsuite/run-dlvhex-tests.sh: Fix answer sets processing.

	* testsuite/Makefile.am (TESTS): Remove RacerRunner.sh
	(TESTS_ENVIRONMENT): Fix --plugindir for make check for builddir checks.

	* testsuite/TestSuite.cpp: Get more testsuite feedback.

2010-06-08  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/RacerNRQLBuilder.cpp (NRQLDatatypeBuilder::createBody): Use
	old-school DLQuery for datatype roles.

	* src/Answer.cpp: Add sanity checks for pattern and answer tuple.

	* include/RacerExtAtom.tcc (RacerRoleAtom<GetKBManager,GetCache>::getDirectors): Use
	old-school queries with positive role queries, and CQs with
	negative (not R) queries.
	* src/QueryCtx.cpp: Likewise.

2010-05-11  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/RacerExtAtom.tcc (setupRacer): Always turn on
	data-substrate mirroring, as we have to issue a full reset after
	every query due to a Racer bug.

	Closes ticket #9.

2010-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* AUTHORS: Fix content.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* src/Makefile.am: Likewise.
	* include/Makefile.am: Likewise.
