@@ -79,7 +79,6 @@ typedef int flex_int32_t;
 typedef unsigned char flex_uint8_t; 
 typedef unsigned short int flex_uint16_t;
 typedef unsigned int flex_uint32_t;
-#endif /* ! C99 */
 
 /* Limits of integral types. */
 #ifndef INT8_MIN
@@ -110,6 +109,8 @@ typedef unsigned int flex_uint32_t;
 #define UINT32_MAX             (4294967295U)
 #endif
 
+#endif /* ! C99 */
+
 #endif /* ! FLEXINT_H */
 
 /* %endif */
@@ -119,6 +120,7 @@ typedef unsigned int flex_uint32_t;
 #include <iostream> 
 #include <errno.h>
 #include <cstdlib>
+#include <cstdio>
 #include <cstring>
 /* end standard C++ headers. */
 /* %endif */
@@ -190,7 +192,15 @@ typedef unsigned int flex_uint32_t;
 
 /* Size of default input buffer. */
 #ifndef YY_BUF_SIZE
+#ifdef __ia64__
+/* On IA-64, the buffer size is 16k, not 8k.
+ * Moreover, YY_BUF_SIZE is 2*YY_READ_BUF_SIZE in the general case.
+ * Ditto for the __ia64__ case accordingly.
+ */
+#define YY_BUF_SIZE 32768
+#else
 #define YY_BUF_SIZE 16384
+#endif /* __ia64__ */
 #endif
 
 /* The state buf must be large enough to hold one state per character in the main buffer.
@@ -864,7 +874,7 @@ using namespace std;
 #line 110 "RacerAnswerScanner.lpp"
 // advance the end location after each tokenizing step
 #define YY_USER_ACTION  yylloc->columns(yyleng);
-#line 868 "RacerAnswerScanner.cpp"
+#line 878 "RacerAnswerScanner.cpp"
 
 #define INITIAL 0
 #define racererror 1
@@ -926,7 +936,12 @@ static int yy_flex_strlen (yyconst char * );
 
 /* Amount of stuff to slurp up with each read. */
 #ifndef YY_READ_BUF_SIZE
+#ifdef __ia64__
+/* On IA-64, the buffer size is 16k, not 8k */
+#define YY_READ_BUF_SIZE 16384
+#else
 #define YY_READ_BUF_SIZE 8192
+#endif /* __ia64__ */
 #endif
 
 /* Copy whatever the last rule matched to the standard output. */
@@ -1042,7 +1057,7 @@ yylloc->step();
   typedef yy::RacerAnswerParser::token token;
 
 
-#line 1046 "RacerAnswerScanner.cpp"
+#line 1061 "RacerAnswerScanner.cpp"
 
 	if ( !(yy_init) )
 		{
@@ -1295,7 +1310,7 @@ YY_RULE_SETUP
 #line 209 "RacerAnswerScanner.lpp"
 ECHO;
 	YY_BREAK
-#line 1299 "RacerAnswerScanner.cpp"
+#line 1314 "RacerAnswerScanner.cpp"
 case YY_STATE_EOF(INITIAL):
 case YY_STATE_EOF(racererror):
 case YY_STATE_EOF(raceranswer):
