@@ -1,5 +1,9 @@
 2010-06-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* src/HexDLScanner.cpp: Regenerate flex scanner using Ubuntu's
+	patched flex 2.5.35-9, fixes a #include <cstdio> for g++4.4.
+	* src/RacerAnswerScanner.cpp: Likewise.
+
 	* src/stack.hh: Add autogenerated bison and flex parsers (using
 	Bison 2.3 and Flex 2.5.35, Bison 2.4.2 seems to have changed the
 	C++ API yet again).
